--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 				</div>
 
 				<div class="box" style="margin-top: 0;">
-					<img src="loren.JPG" style="width: 100%;">
+					<img src="loren.jpg" style="width: 100%;">
 					<div class="text" style="top: 55%;font-family: 'EB Garamond', serif;">
 						<p style="font-size: 4vw;">Join an unstoppable community of monthly givers.</p>
 			<p style="font-size: 3vw;">There will be a day–in our lifetime–when we get to celebrate every person on the planet having access to his food. We want to celebrate that day with you</p>
