social media links

--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
 						<div class="columns">
 						  <ul class="price">
 						    <li class="grey">Donate ₹ 100</li>
-						    <li>We can buy a set of book, pen, pencils, crayon and colours for the street kids and orphans.</li>
+						    <li>We can buy a set of pen, pencils and crayons for the street kids and orphans.</li>
 						    <li class="grey"><a href="https://www.instamojo.com/@bethechange/" rel="im-checkout" data-text="Donate" data-css-style="  background:#3BA3FE;color: #FEDE3B;width:180px; border-radius:4px;align-content:center;"   data-layout="vertical" class="button" style="color:#FEDE3B;">Earn Karma</a></li>
 						  </ul>
 						</div>
@@ -380,7 +380,7 @@
 						<div class="columns">
 						  <ul class="price">
 						    <li class="grey">Donate ₹ 200</li>
-						    <li>We can buy a set of book, pen, pencils, crayon and colours for the street kids and orphans.</li>
+						    <li>We can buy a set of 3 book for the street kids and orphans.</li>
 						    <li class="grey"><a href="https://www.instamojo.com/@bethechange/" rel="im-checkout" data-text="Donate" data-css-style="  background:#3BA3FE;color: #FEDE3B;width:180px; border-radius:4px"   data-layout="vertical" class="button" style="color:#FEDE3B;">Earn Karma</a></li>
 						  </ul>
 						</div>
@@ -388,7 +388,7 @@
 						<div class="columns">
 						  <ul class="price">
 						    <li class="grey">Donate ₹ 500</li>
-						    <li>We can buy a set of book, pen, pencils, crayon and colours for the street kids and orphans.</li>
+						    <li>We can buy a set of 4 book, pen, pencils, crayon and colours for the street kids and orphans.</li>
 						    <li class="grey"><a href="https://www.instamojo.com/@bethechange/" rel="im-checkout" data-text="Donate" data-css-style="  background:#3BA3FE;color: #FEDE3B;width:180px; border-radius:4px"   data-layout="vertical" class="button" style="color:#FEDE3B;">Earn Karma</a></li>
 						  </ul>
 						</div>
@@ -693,8 +693,8 @@
 		    </a>
 		  </div>
 		</div>
- -->
 
+ -->
 
 
 				<div class="botnav" style="align-content: space-around;width: 100%; width: 100%;">	<!-- BOTNAV BAR -->	
@@ -751,8 +751,8 @@
 					</div>
 
 					<div style="width: 200px;height: auto;display: flex;">
-					        <a href="https://www.instagram.com/socialhackathoncmrit/" target="_blank"><img src="ig.png" class="footerimg"></a>
-					        <a href="https://www.facebook.com/SocialHackathonCMRIT" target="_blank"><img src="foot2.png" class="footerimg"></a>
+					        <a href="https://www.instagram.com/bethechangehospete/" target="_blank"><img src="ig.png" class="footerimg"></a>
+					        <a href="https://www.facebook.com/btch1998" target="_blank"><img src="foot2.png" class="footerimg"></a>
 					</div> 
 				</div>
 
