--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
 
 						<div class="columns">
 						  <ul class="price">
-						    <li class="grey">Donate ₹ 100</li>
+						    <li class="grey">Donate Rs. 100</li>
 						    <li>We can buy a set of pen, pencils and crayons for the street kids and orphans.</li>
 						    <li class="grey"><a href="https://www.instamojo.com/@bethechange/" rel="im-checkout" data-text="Donate" data-css-style="  background:#3BA3FE;color: #FEDE3B;width:180px; border-radius:4px;align-content:center;"   data-layout="vertical" class="button" style="color:#FEDE3B;">Earn Karma</a></li>
 						  </ul>
@@ -379,7 +379,7 @@
 
 						<div class="columns">
 						  <ul class="price">
-						    <li class="grey">Donate ₹ 200</li>
+						    <li class="grey">Donate Rs. 200</li>
 						    <li>We can buy a set of 3 book for the street kids and orphans.</li>
 						    <li class="grey"><a href="https://www.instamojo.com/@bethechange/" rel="im-checkout" data-text="Donate" data-css-style="  background:#3BA3FE;color: #FEDE3B;width:180px; border-radius:4px"   data-layout="vertical" class="button" style="color:#FEDE3B;">Earn Karma</a></li>
 						  </ul>
@@ -387,7 +387,7 @@
 
 						<div class="columns">
 						  <ul class="price">
-						    <li class="grey">Donate ₹ 500</li>
+						    <li class="grey">Donate Rs. 500</li>
 						    <li>We can buy a set of 4 book, pen, pencils, crayon and colours for the street kids and orphans.</li>
 						    <li class="grey"><a href="https://www.instamojo.com/@bethechange/" rel="im-checkout" data-text="Donate" data-css-style="  background:#3BA3FE;color: #FEDE3B;width:180px; border-radius:4px"   data-layout="vertical" class="button" style="color:#FEDE3B;">Earn Karma</a></li>
 						  </ul>
