--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 				<div class="box" style="width: 100%;margin: 0;padding-bottom: 10%;background-color: #000;">
 					<video autoplay muted loop  style="width: 100%	;height: 100%; opacity: 1; background-image: url('load.gif');">
-						<source src="joy.mp4" type="video/mp4"> 
+						<source src="joy_high.mp4" type="video/mp4"> 
 					</video>
 					<div class="text" style="margin: 0;width: 100%;top:60%;">
 							<div class="header" style="opacity: 0.6;margin-bottom: 0px;background:linear-gradient(-35deg,#afbfdc,rgba(0, 230, 64, 1),rgba(25, 181, 254, 1));">  <!-- QUOTE BAR -->
@@ -305,7 +305,7 @@
 				</div>
 				<!-- flex ends here -->
 				<div>
-					<div class="flex-box flextext" id="donate" style="margin:4%;padding:10px 50px 10px 50px;background: none;background-color:white;opacity: 1;border-top: 2px solid black;border-bottom: 2px solid black;width: 100%;">					<!-- Donate Table -->
+					<div class="flex-box flextext" id="donate" style="border-top: 2px solid black;border-bottom: 2px solid black;width: 100%;">					<!-- Donate Table -->
 						<style type="text/css">
 							* {
 							  box-sizing: border-box;
@@ -316,6 +316,7 @@
 							  width: 300px;
 							  max-width: 80%;
 							  padding: 8px;
+							  margin-right: 6%;
 							}
 
 							.price {
